--- a/tests/Library.Api.Tests.Integration/Library.Api.Tests.Integration.csproj
+++ b/tests/Library.Api.Tests.Integration/Library.Api.Tests.Integration.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Library.Api\Library.Api.csproj" />
+    <ProjectReference Include="..\..\src\Library.Api\Library.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
